[tool.poetry]
name = "ndldc"
version = "0.1.0"
description = ""
authors = ["Hiroki Ishioka <ishioka0222@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
lxml = "^4.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
