[tool.poetry]
name = "ndldc"
version = "0.1.0"
description = ""
authors = ["Hiroki Ishioka <ishioka0222@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
ndldc = "ndldc.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
lxml = "^4.9.2"
requests = "^2.28.1"
pycryptodome = "^3.16.0"
Pillow = "^9.3.0"
img2pdf = "^0.4.4"

[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
